--- a/notebooks/net_trained_k_times_features.Rmd
+++ b/notebooks/net_trained_k_times_features.Rmd
@@ -5,9 +5,9 @@ jupyter:
       extension: .Rmd
       format_name: rmarkdown
       format_version: '1.2'
-      jupytext_version: 1.13.2
+      jupytext_version: 1.13.0
   kernelspec:
-    display_name: Python 3 (ipykernel)
+    display_name: Python 3
     language: python
     name: python3
 ---
