--- a/notebooks/heatmaps_whole_dataset.Rmd
+++ b/notebooks/heatmaps_whole_dataset.Rmd
@@ -5,9 +5,9 @@ jupyter:
       extension: .Rmd
       format_name: rmarkdown
       format_version: '1.2'
-      jupytext_version: 1.13.2
+      jupytext_version: 1.13.0
   kernelspec:
-    display_name: Python 3 (ipykernel)
+    display_name: Python 3
     language: python
     name: python3
 ---
@@ -24,24 +24,20 @@ seed = 1
 import os
 
 
-data_dir = '/home/suchoparova/optdata/diplomka/'
+data_dir = '/home/gabi/diplomka/code/info-nas/data/'
 print(os.listdir(data_dir))
-
-
-def from_data(path, data=True):
-    return os.path.join(data_dir, 'data' if data else '', path)
 ```
 
 ```{python}
 from nasbench import api
 
-nasbench_path = os.path.join(data_dir, 'data/nasbench_only108.tfrecord')
+nasbench_path = os.path.join(data_dir, 'nasbench_only108.tfrecord')
 nb = api.NASBench(nasbench_path)
 ```
 
 ```{python}
-nb_dataset = from_data('nb_dataset.json')
-cifar = from_data('cifar')
+nb_dataset = os.path.join(data_dir, 'nb_dataset.json')
+cifar = os.path.join(data_dir, 'cifar')
 ```
 
 ```{python}
@@ -50,14 +46,63 @@ torch.multiprocessing.set_sharing_strategy('file_system')
 from heatmap_utils import get_labeled_data
 
 
-dataset_pt = from_data('train_long.pt')
+dataset_pt = os.path.join(data_dir, 'train_long.pt')
 data = get_labeled_data(dataset_pt, nb, nb_dataset, cifar)
+```
+
+```{python}
+hashes = set()
+
+for d in data:
+    hashes.update(d['hash'])
+hashes
+```
+
+```{python}
+from info_nas.config import load_json_cfg
+from info_nas.models.utils import get_hash_accuracy
+
+config = load_json_cfg('../configs/model_config.json')
+
+accuracies = get_hash_accuracy(hashes, nb, config)
+```
+
+```{python}
+import numpy as np
+times = []
+
+for h in hashes:
+    t = [n['final_training_time'] for n in nb.get_metrics_from_hash(h)[1][12]]
+    times.append(np.mean(t))
+
+print(sum(times))
+```
+
+```{python}
+print(max(accuracies))
+```
+
+```{python}
+import seaborn as sns
+import matplotlib.pyplot as plt
+sns.set(font_scale=1.5)
+save_dir = '/home/gabi/Dropbox/automl-conf/LatexTemplate/img'
+
+plt.figure(figsize=(7,6))
+sns.histplot(accuracies)
+plt.xlim(0.79, 0.95)
+plt.title("Test accuracy distribution of 608 train networks.")
+plt.tight_layout()
+plt.savefig(f"{save_dir}/accdist.png")
+plt.show()
 ```
 
 ```{python}
 from heatmap_utils import get_pred_and_orig
 
-orig, info, weights, labels = get_pred_and_orig(data, device=torch.device('cpu'))
+top_k = 10
+orig, info, _, labels = get_pred_and_orig(data, device=torch.device('cpu'), top_k=top_k,
+                                         )#batch_stop=1001)
 ```
 
 ```{python}
@@ -67,44 +112,42 @@ sns.set()
 
 from heatmap_utils import plot_single_heatmap, heatmap_diff
 
-
+vmin = 0
+vmax = 1
 o = orig[:1000]
 
-plot_single_heatmap(o, sub_mean=True, by_row=True, top_k=10)
+save_dir = '/home/gabi/Dropbox/automl-conf/LatexTemplate/img'
+
+plot_single_heatmap(o, sub_mean=False, by_row=True, vmin=vmin, vmax=vmax)
+plt.xlabel('Top 10 features (0 most important)')
+plt.title('Output of one network on all images')
+plt.ylabel('Image')
+plt.xlabel('Top 10 features (0 most important)')
+plt.savefig(f"{save_dir}/heat1net.png")
+plt.show()
+```
+
+```{python}
+plot_single_heatmap(orig[0::1000], sub_mean=False, by_row=True, vmin=vmin, vmax=vmax)
+plt.title('Output of all networks on one image')
+plt.ylabel('Network')
+plt.xlabel('Top 10 features (0 most important)')
+plt.savefig(f"{save_dir}/heat1img.png")
 plt.show()
 ```
 
 ```{python}
 o_2 = orig[5000:6000]
 
-plot_single_heatmap(o_2, sub_mean=True, by_row=True, top_k=5)
+plot_single_heatmap(o_2, sub_mean=False, by_row=True, vmin=vmin, vmax=vmax)
 plt.show()
 
-heatmap_diff(o, o_2, sub_mean=True, by_row=True, plot_it=True, use_sq=True, top_k=10)
+heatmap_diff(o, o_2, sub_mean=False, by_row=True, plot_it=True, use_sq=True)
 plt.show()
 ```
 
 ```{python}
 orig.shape
-```
-
-```{python}
-import numpy as np
-
-norm_orig = (orig - np.mean(orig, axis=0)) / np.std(orig, axis=0)
-```
-
-```{python}
-o = norm_orig[:1000]
-o_2 = norm_orig[5000:6000]
-
-plot_single_heatmap(o, sub_mean=True, by_row=True, top_k=5)
-plt.show()
-plot_single_heatmap(o_2, sub_mean=True, by_row=True, top_k=5)
-plt.show()
-
-heatmap_diff(o, o_2, sub_mean=True, by_row=True, plot_it=True, use_sq=True, top_k=10)
-plt.show()
 ```
 
 ```{python}
@@ -116,10 +159,8 @@ n_nets = 608
 # n_nets = 100
 print_freq = 1000
 normalize_columns = False
-top_k = 10
 
 from_feats = norm_orig if normalize_columns else orig
-
 res_matrix = np.zeros((n_nets, n_nets))
 
 divsigma = False
@@ -135,7 +176,7 @@ for i, j in itertools.combinations(range(n_nets), 2):
 
     o = from_feats[i * 1000:(i + 1) * 1000]
     o_2 = from_feats[j * 1000:(j + 1) * 1000]
-    diff = heatmap_diff(o, o_2, sub_mean=submean, div_by_sigma=divsigma, by_row=True, plot_it=False, use_sq=True, top_k=top_k)
+    diff = heatmap_diff(o, o_2, sub_mean=submean, div_by_sigma=divsigma, by_row=True, plot_it=False, use_sq=True)
     
     diff = np.sum(diff, axis=1)
     diff = diff.mean()
@@ -148,8 +189,19 @@ from heatmap_utils import plot_hist
 
 
 plt.title(f"Error histogram with sigma division turned {'on' if divsigma else 'off'}")
-plot_hist(res_matrix.flatten())
-plt.xlim(0, 5)
+flat = res_matrix.flatten()
+flat = flat[flat > 0]
+plot_hist(flat)
+plt.show()
+```
+
+```{python}
+print(np.quantile(flat, 0.25))
+np.median(flat)
+```
+
+```{python}
+sns.boxplot(x=flat)
 plt.show()
 ```
 
@@ -171,7 +223,13 @@ plt.show()
 ```
 
 ```{python}
-
+for th in np.arange(0, 1, 0.1):
+    
+    km = AgglomerativeClustering(n_clusters=None, linkage='complete', affinity='precomputed', distance_threshold=th)
+    res = km.fit_predict(res_matrix)
+    uniq = np.unique(res, return_counts=True)
+    
+    print(round(th, 1), ' | ', sum(uniq[1] == 1), ', clusters > 2: ', sum(uniq[1] > 2))
 ```
 
 ```{python}
@@ -231,7 +289,7 @@ for cluster_no, cluster_size in zip(*np.unique(res, return_counts=True)):
         for a in accs:
             acc_df.append({'cluster': cluster_no, 'acc': a})
     
-    print("mean ", np.mean(accs), "| std ", np.std(accs))
+    print("mean ", np.mean(accs), "| std ", np.std(accs), "| max ", np.max(accs))
     print()
     #print(accs)
     print('----------------')
@@ -240,12 +298,19 @@ acc_df = pd.DataFrame(acc_df)
 ```
 
 ```{python}
-plt.figure(figsize=(15, 5))
-plt.title(f'Accuracies of networks clustered by {top_k} features, threshold {thres}')
+save_dir = '/home/gabi/Dropbox/automl-conf/LatexTemplate/img'
+
+sns.set(font_scale=1.4)
+plt.figure(figsize=(15, 6))
+plt.title(f'Accuracies of networks clustered by top {top_k} features, threshold {thres}')
 
 sns.boxplot(data=acc_df, x='cluster', y='acc')
-sns.swarmplot(data=acc_df, x='cluster', y='acc', color=".25")
-plt.ylim(0.7, 1.0)
+sns.stripplot(data=acc_df, x='cluster', y='acc', color=".25", alpha=0.6)
+plt.ylim(0.79, 0.95)
+plt.ylabel('Accuracy')
+plt.xlabel('Cluster number')
+plt.tight_layout()
+plt.savefig(f"{save_dir}/cluster.png")
 plt.show()
 ```
 
