Check if arch2vec prepro is the same as the original one.

--- a/notebooks/plot_io.ipynb
+++ b/notebooks/plot_io.ipynb
@@ -346,6 +346,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 131,
+   "outputs": [],
+   "source": [
+    "some_net = next(iter(io_dataset))\n",
+    "adj, ops = torch.tensor(some_net['adj'])[np.newaxis], torch.tensor(some_net['ops'])[np.newaxis]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-03T13:46:04.445422Z",
+     "end_time": "2023-05-03T13:46:04.487662Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "outputs": [],
+   "source": [
+    "ops_prepro, adj_prepro = prepro.preprocess(ops, adj)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-03T13:46:04.718067Z",
+     "end_time": "2023-05-03T13:46:04.773506Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "outputs": [],
+   "source": [
+    "from arch2vec.utils import preprocessing\n",
+    "\n",
+    "adj_a2v, ops_a2v, prep_reverse = preprocessing(adj, ops, **{'method': 4, 'lbd': 1.0})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-03T13:45:02.336459Z",
+     "end_time": "2023-05-03T13:45:02.360988Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "outputs": [],
+   "source": [
+    "assert (adj_prepro == adj_a2v).all()\n",
+    "assert (ops_prepro == ops_a2v).all()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-03T13:45:38.141066Z",
+     "end_time": "2023-05-03T13:45:38.180218Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "outputs": [],
+   "source": [
+    "adj_a2v_orig, ops_a2v_orig = prep_reverse(adj_a2v, ops_a2v)\n",
+    "ops_orig, adj_orig = prepro.process_reverse(ops_prepro, adj_prepro)\n",
+    "\n",
+    "assert (adj_a2v_orig == adj_orig).all()\n",
+    "assert (ops_a2v_orig == ops_orig).all()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-03T13:47:04.174343Z",
+     "end_time": "2023-05-03T13:47:04.228758Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "id": "a595e1e1",
    "metadata": {
@@ -374,11 +457,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "f8500969",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-05-03T16:03:06.314755Z",
+     "end_time": "2023-05-03T16:07:43.923308Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10000\n",
+      "20000\n",
+      "30000\n",
+      "40000\n",
+      "50000\n",
+      "60000\n",
+      "70000\n",
+      "80000\n",
+      "90000\n",
+      "100000\n",
+      "110000\n",
+      "120000\n",
+      "130000\n",
+      "140000\n",
+      "150000\n",
+      "160000\n",
+      "170000\n",
+      "180000\n",
+      "190000\n",
+      "200000\n",
+      "210000\n",
+      "220000\n",
+      "230000\n",
+      "240000\n",
+      "250000\n",
+      "260000\n",
+      "270000\n",
+      "280000\n",
+      "290000\n",
+      "300000\n",
+      "310000\n",
+      "320000\n",
+      "330000\n",
+      "340000\n",
+      "350000\n",
+      "360000\n",
+      "370000\n",
+      "380000\n",
+      "390000\n",
+      "400000\n",
+      "410000\n",
+      "420000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, h in enumerate(nb.hash_iterator()):\n",
+    "    if i % 10000 == 0:\n",
+    "        print(i)\n",
+    "\n",
+    "    metrics = nb.get_metrics_from_hash(h)\n",
+    "    adj, ops = metrics[0]['module_adjacency'], metrics[0]['module_operations']\n",
+    "    ops, adj = prepro.parse_net(ops, adj)\n",
+    "\n",
+    "    adj, ops = torch.tensor(adj)[np.newaxis], torch.tensor(ops)[np.newaxis]\n",
+    "\n",
+    "    ops_prepro, adj_prepro = prepro.preprocess(ops, adj)\n",
+    "    adj_a2v, ops_a2v, prep_reverse = preprocessing(adj, ops, **{'method': 4, 'lbd': 1.0})\n",
+    "\n",
+    "    assert (adj_prepro == adj_a2v).all()\n",
+    "    assert (ops_prepro == ops_a2v).all()\n",
+    "\n",
+    "    adj_a2v_orig, ops_a2v_orig = prep_reverse(adj_a2v, ops_a2v)\n",
+    "    ops_orig, adj_orig = prepro.process_reverse(ops_prepro, adj_prepro)\n",
+    "\n",
+    "    assert (adj_a2v_orig == adj_orig).all()\n",
+    "    assert (ops_a2v_orig == ops_orig).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
